kubernetes/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: default
  labels:
    app: dividend-tracker-mongodb
spec:
  selector:
    app: dividend-tracker-mongodb
  ports:
  - port: 27017
    targetPort: 27017
    name: mongodb
  type: ClusterIP
