kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dividend-tracker
  namespace: default
  labels:
    app: dividend-tracker
spec:
  selector:
    app: dividend-tracker
  ports:
  - port: 5000
    targetPort: 5000
    name: http
  type: ClusterIP
